Refactor CSS styles for improved readability and consistency; update TypeScript definitions and configuration for better type support; enhance Vite test setup with improved mocking for Next.js components and window properties.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,13 +24,19 @@
         "src/*"
       ]
     },
-    "allowJs": true
+    "allowJs": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
-    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "src/types/**/*.d.ts"
+    "next-env.d.ts",
+    "src/types/**/*.d.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
