--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,10 @@
 {
-    "printWidth": 200,
-    "tabWidth": 4,
-    "singleQuote": true
+  "printWidth": 100,
+  "trailingComma": "all",
+  "singleQuote": true,
+  "semi": true,
+  "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+  "plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
